--- a/packages/front/styles/resources/history-musics.css
+++ b/packages/front/styles/resources/history-musics.css
@@ -1,8 +1,10 @@
 .history-entry {
   .ui-kit-accordion {
-    --color-hover: var(--color-music-darker);
-    --color-hover-text: var(--color-music-text-on-darker);
-    --color-open: var(--color-hover);
+    @media (hover: hover) {
+      --color-hover: var(--color-music-darker);
+      --color-hover-text: var(--color-music-text-on-darker);
+    }
+    --color-open: var(--color-music-darker);
     --color-container: var(--color-music-light2);
 
     --color-link: var(--color-music-link);
