--- a/packages/front/modules/ui-kit/upload/YouTubeUpload.module.css
+++ b/packages/front/modules/ui-kit/upload/YouTubeUpload.module.css
@@ -2,13 +2,38 @@
 
 .container {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+
   gap: 0.5rem;
-  width: 100%;
-  max-width: 48rem;
 
   svg {
     margin: auto;
+  }
+  .firstRow {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    max-width: 48rem;
+
+    svg {
+      margin: auto;
+    }
+  }
+
+  .status {
+    display: block;
+    text-align: center;
+    font-size: 0.75em;
+    height: 1em;
+  }
+
+  .statusError {
+    color: var(--color-red-darker);
+  }
+
+  .statusCompleted {
+    color: var(--color-green-darker2);
   }
 }
 
@@ -62,13 +87,6 @@
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
-.uploadButton {
-  width: 2.5rem !important;
-}
-
-.inputValid {
-}
-
 .inputValid:focus {
   border-color: var(--color-gray-500);
   box-shadow:
@@ -85,4 +103,22 @@
   box-shadow:
     0 10px 15px -3px rgba(239, 68, 68, 0.1),
     0 4px 6px -2px rgba(239, 68, 68, 0.05);
+}
+.actions {
+  --width: 2rem;
+  width: var(--width);
+  height: var(--width);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .uploadButton {
+    width: var(--width) !important;
+    height: var(--width) !important;
+  }
+
+  .loading > * {
+    --spinner-size: var(--width) !important;
+    --spinner-width: 0.125rem !important;
+  }
 }
