--- a/packages/front/modules/fetching/fetching.style.module.css
+++ b/packages/front/modules/fetching/fetching.style.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  margin-top: 3rem;
 
   --spinner-size: 5rem;
   --spinner-width: 0.25rem;
