--- a/packages/front/app/PageContainer.module.css
+++ b/packages/front/app/PageContainer.module.css
@@ -8,13 +8,18 @@
   min-height: 100%;
 }
 
-.container > main {
+.container.default > main {
   width: 95vw;
   height: 100%;
 
   @media (width >= 640px) {
     width: calc(640px * 0.95);
   }
+}
+
+.container.full > main {
+  width: 100%;
+  height: 100%;
 }
 
 .container > main h1,
