--- a/packages/front/modules/ui-kit/upload/YouTubeUpload.module.css
+++ b/packages/front/modules/ui-kit/upload/YouTubeUpload.module.css
@@ -120,5 +120,6 @@
   .loading > * {
     --spinner-size: var(--width) !important;
     --spinner-width: 0.125rem !important;
+    margin: 0;
   }
 }
