--- a/packages/front/styles/globals-ui-kit.css
+++ b/packages/front/styles/globals-ui-kit.css
@@ -29,6 +29,7 @@
 .ui-kit-resource-input .ui-kit-resource-input-text,
 .ui-kit-resource-input .ui-kit-resource-input-number,
 .ui-kit-resource-input .ui-kit-resource-input-array-string {
+  display: flex;
   flex-flow: row;
   width: 100%;
   margin: 0 1em;
@@ -36,6 +37,20 @@
   & label {
     text-wrap: nowrap;
   }
+}
+
+.ui-kit-resource-input .ui-kit-resource-input-text,
+.ui-kit-resource-input .ui-kit-resource-input-number {
+  gap: 0.5rem;
+
+  span {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.ui-kit-resource-input .ui-kit-resource-input-number {
+  width: fit-content;
 }
 
 .ui-kit-resource-input .ui-kit-resource-input-text > span:first-child,
@@ -90,10 +105,24 @@
 }
 
 .ui-kit-resource-input-array-string .ui-kit-array-add-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   .ui-kit-add-button {
     --color: green;
     border-color: var(--color);
     color: var(--color);
     padding: 0 0.25em;
   }
+}
+
+.ui-kit-resource-input-array-string {
+  display: flex;
+  flex-flow: row wrap !important;
+}
+
+/* Label */
+.ui-kit-resource-input:first-child {
+  white-space: nowrap;
 }
