--- a/packages/front/modules/musics/musics/entry/body/styles.module.css
+++ b/packages/front/modules/musics/musics/entry/body/styles.module.css
@@ -36,21 +36,32 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    margin-top: 0.5rem !important;
-    user-select: none;
-    cursor: pointer;
+    margin-top: 1rem !important;
+  }
+
+  .optionalButton,
+  details > summary {
     color: var(--color-primary-darker2);
 
     &:hover {
       color: var(--color-primary);
+      cursor: pointer;
+      user-select: none;
     }
-  }
-
-  details > summary {
-    cursor: pointer;
   }
 
   .lineWrap {
     flex-wrap: wrap !important;
   }
+  .createdAt,
+  .updatedAt {
+    white-space: nowrap;
+  }
+}
+
+.uploaders {
+  margin: 2rem 0;
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
 }
