--- a/packages/front/modules/ui-kit/upload/FileUpload.module.css
+++ b/packages/front/modules/ui-kit/upload/FileUpload.module.css
@@ -1,7 +1,5 @@
 .container {
-  max-width: 32rem;
-  margin: 0 auto;
-  padding: 1.5rem;
+  width: 100%;
 
   /* Variables de color locales para el componente */
   --fileupload-text-primary: var(--color-black);
@@ -35,17 +33,18 @@
     background-color var(--transition-duration) ease-in-out;
 
   display: flex;
+  align-items: center;
   flex-direction: column;
-}
 
-.dropzone:hover {
-  border-color: var(--fileupload-border-hover);
-  background-color: rgba(255, 255, 255, 1);
-}
+  &:hover {
+    border-color: var(--fileupload-border-hover);
+    background-color: rgba(255, 255, 255, 1);
+  }
 
-.dropzone.active {
-  border-color: var(--color-primary);
-  background-color: var(--fileupload-bg-active);
+  &.active {
+    border-color: var(--color-primary);
+    background-color: var(--fileupload-bg-active);
+  }
 }
 
 .hiddenInput {
@@ -77,15 +76,16 @@
 .selectButton {
   background-color: var(--color-primary);
   color: white;
-  padding: 0.5rem 1.5rem;
+  padding: 1rem 2.5rem;
   border: none;
   border-radius: 0.5rem;
   cursor: pointer;
   font-size: 0.875rem;
-}
+  max-width: 15rem;
 
-.selectButton:hover {
-  background-color: var(--color-primary-darker);
+  &:hover {
+    background-color: var(--color-primary-darker);
+  }
 }
 
 .errorContainer {
@@ -209,17 +209,18 @@
 }
 
 /* Responsividad */
-@media (max-width: 640px) {
-  .container {
-    padding: 1rem;
-  }
-
+@media (width < 400px) {
   .dropzone {
-    padding: 1.5rem;
+    padding: 1rem;
+    min-width: 13rem;
   }
 
   .uploadIcon {
     width: 2.5rem !important;
     height: 2.5rem !important;
+  }
+
+  .selectButton {
+    padding: 0.75rem 1rem;
   }
 }
