--- a/packages/front/modules/utils/resources/elements/crud-buttons.module.css
+++ b/packages/front/modules/utils/resources/elements/crud-buttons.module.css
@@ -40,8 +40,9 @@
   display: flex;
   justify-content: end !important;
   gap: 1.5rem !important;
+  margin: 0.5rem 0 !important;
 }
 
 :global(.ui-kit-accordion .body):has(> .actionsBar:first-child) {
-  padding-top: 0.5rem !important;
+  padding-top: 0 !important;
 }
