--- a/packages/front/styles/globals-ui-kit.css
+++ b/packages/front/styles/globals-ui-kit.css
@@ -92,15 +92,25 @@
   align-items: center;
 
   .ui-kit-delete-button a {
-    --color: red;
-    display: inline-block;
-    width: 1em;
-    border-color: var(--color);
+    --color: var(--color-red-darker);
+    display: flex;
     color: var(--color);
+    width: 1em;
     height: 1em;
     text-align: center;
     line-height: 1em;
     margin-left: 0.5em;
+    margin-top: 1px;
+
+    &:hover {
+      color: var(--color-red-light);
+    }
+
+    &,
+    svg {
+      width: 1rem;
+      height: 1rem;
+    }
   }
 }
 
@@ -110,10 +120,21 @@
   align-items: center;
 
   .ui-kit-add-button {
-    --color: green;
+    --color: var(--color-green-darker2);
     border-color: var(--color);
     color: var(--color);
     padding: 0 0.25em;
+
+    &,
+    svg {
+      width: 1rem;
+      height: 1rem;
+    }
+
+    &:hover {
+      text-decoration: none;
+      color: var(--color-green-darker);
+    }
   }
 }
 
